--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +41,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_np, second_np, label_np  = data.getData()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linearized complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_np, second_np = utils.process_splitted(first_np, second_np)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_np, second_np, label_np  = data.getData()\n",
-    "first_np, second_np = utils.process_splitted(first_np, second_np)\n",
     "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)\n",
     "first2idx_np, second2idx_np = utils.encode(first_ls, second_ls, ch2idx, max_len)"
    ]
