--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,8 @@
     "\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from datetime import datetime\n",
+    "\n",
+    "import timeit\n",
     "\n",
     "import data\n",
     "import bpe\n",
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linearized complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_np, second_np = utils.process_splitted(first_np, second_np)"
    ]
@@ -155,7 +149,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'test1'\n",
+    "title = 'inverted_second1'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -216,6 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time = timeit.default_timer()\n",
+    "\n",
     "trainer.train(\n",
     "    epochs=epochs,\n",
     "    title=title,\n",
@@ -226,7 +222,9 @@
     "    model=model,\n",
     "    optimizer=optimizer,\n",
     "    loss_fn=loss_fn\n",
-    ")"
+    ")\n",
+    "\n",
+    "end_time = (timeit.default_timer() - start_time) / 60.0"
    ]
   },
   {
@@ -254,10 +252,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tester.test(test_dataloader=test_dataloader,\n",
-    "            device=device,\n",
-    "            model=model,\n",
-    "            title=title)"
+    "loss, acc = tester.test(test_dataloader=test_dataloader,\n",
+    "                        device=device,\n",
+    "                        model=model,\n",
+    "                        title=title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../result/final1', 'a') as f:\n",
+    "        text = title + '\\t |\\tloss: ' + str(loss) + '\\t |\\tacc: ' + str(acc) + '\\t |\\t time: ' + str(round(end_time, 3)) + ' min\\n'\n",
+    "        f.write(text)"
    ]
   },
   {
