updated predictor to inverse

--- a/src/prototype.ipynb
+++ b/src/prototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,17 @@
      "output_type": "stream",
      "text": [
       "successfully got ch2idx!\n",
-      "44.76% that next line must be omitted.\n"
+      "tensor([[ 6,  7,  5,  3,  4,  8, 18, 12, 16, 22,  4, 20, 19,  9,  8, 15, 16,  2,\n",
+      "         13,  4,  8,  3,  9, 21, 12, 13, 29,  9, 15,  9,  8, 11,  4, 20, 19,  9]])\n",
+      "tensor([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  8, 18,  5, 14,  2, 12,\n",
+      "         15, 17,  4,  2, 18, 24, 18,  6,  4,  8, 18,  2, 14, 12, 49, 20, 19,  9]])\n",
+      "100.00% that next line must be omitted.\n"
      ]
     }
    ],
    "source": [
-    "first = '회사 동료'\n",
-    "second = '분들과 다녀왔는데 분위기도 좋고 음식도'\n",
+    "first = '회사 동료 분들과 다녀왔는데 분'\n",
+    "second = '분위기도 좋고 음식도'\n",
     "\n",
     "predictor.predict(first, second, model)"
    ]
