--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linearized complete!\n"
+     ]
+    }
+   ],
    "source": [
     "first_np, second_np = utils.process_splitted(first_np, second_np)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done tokenizing both data!\n",
+      "saved ch2idx to file!\n",
+      "encoding comlete!\n"
+     ]
+    }
+   ],
    "source": [
     "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)\n",
     "first2idx_np, second2idx_np = utils.encode(first_ls, second_ls, ch2idx, max_len)"
@@ -71,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 27 / 130 pretrained vectors found.\n"
+     ]
+    }
+   ],
    "source": [
     "pretrained_word2vec = pm.load_pretrained_model(ch2idx)\n",
     "pretrained_word2vec = torch.tensor(pretrained_word2vec)"
@@ -81,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1 GPU(s) available.\n",
+      "Device name: NVIDIA GeForce GTX 1070\n"
+     ]
+    }
+   ],
    "source": [
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -141,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +184,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'inverted_noGudu'\n",
+    "title = 'inverted_noGudu3'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -176,9 +211,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing with pretrained model!!!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arise/anaconda3/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.2 and num_layers=1\n",
+      "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR_rnn(\n",
+      "  (emb): Embedding(130, 200)\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "trainer.set_seed(42)\n",
     "\n",
@@ -206,9 +276,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training...\n",
+      "\n",
+      " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
+      "--------------------------------------------------------------------------------\n",
+      "   1    |   0.269516   | 89.510288  | 0.211826 | 91.74  | 115.69\n",
+      "   2    |   0.167491   | 93.930041  | 0.149220 | 94.67  | 117.17\n",
+      "   3    |   0.135115   | 94.868313  | 0.113680 | 96.15  | 116.18\n",
+      "   4    |   0.110586   | 95.855967  | 0.117874 | 96.15  | 117.88\n",
+      "   5    |   0.099598   | 96.341564  | 0.089371 | 96.78  | 116.68\n",
+      "   6    |   0.091146   | 96.576132  | 0.095895 | 96.52  | 116.23\n",
+      "   7    |   0.084081   | 96.868313  | 0.087554 | 96.81  | 116.54\n",
+      "   8    |   0.081602   | 96.954733  | 0.079905 | 97.22  | 116.39\n",
+      "   9    |   0.078095   | 97.065844  | 0.087839 | 96.85  | 117.89\n",
+      "  10    |   0.073250   | 97.390947  | 0.080517 | 97.15  | 116.38\n",
+      "  11    |   0.068934   | 97.497942  | 0.075685 | 97.22  | 116.66\n",
+      "  12    |   0.071013   | 97.530864  | 0.075126 | 97.00  | 116.72\n",
+      "  13    |   0.065013   | 97.547325  | 0.090661 | 96.70  | 116.56\n",
+      "  14    |   0.063707   | 97.679012  | 0.080787 | 97.33  | 117.16\n",
+      "  15    |   0.061100   | 97.728395  | 0.073129 | 97.70  | 116.77\n",
+      "  16    |   0.059222   | 97.757202  | 0.073734 | 97.63  | 116.65\n",
+      "  17    |   0.055697   | 98.053498  | 0.068517 | 97.67  | 116.26\n",
+      "  18    |   0.055575   | 98.016461  | 0.066021 | 97.74  | 116.26\n",
+      "  19    |   0.053447   | 98.094650  | 0.065999 | 97.78  | 117.18\n",
+      "  20    |   0.054637   | 98.004115  | 0.070985 | 97.41  | 116.47\n",
+      "  21    |   0.050864   | 98.115226  | 0.072641 | 97.52  | 115.99\n",
+      "  22    |   0.050017   | 98.131687  | 0.071351 | 97.74  | 116.75\n",
+      "  23    |   0.049721   | 98.156379  | 0.072676 | 97.59  | 116.39\n",
+      "  24    |   0.051800   | 98.090535  | 0.069404 | 97.67  | 117.16\n",
+      "  25    |   0.045602   | 98.407407  | 0.067360 | 97.78  | 116.46\n",
+      "  26    |   0.045473   | 98.378601  | 0.080916 | 97.30  | 116.37\n",
+      "  27    |   0.042857   | 98.473251  | 0.078278 | 97.70  | 117.01\n",
+      "  28    |   0.044897   | 98.255144  | 0.073599 | 97.74  | 115.92\n",
+      "  29    |   0.041683   | 98.506173  | 0.072478 | 97.37  | 117.18\n",
+      "  30    |   0.041459   | 98.436214  | 0.073392 | 97.81  | 116.50\n",
+      "  31    |   0.045249   | 98.251029  | 0.071707 | 97.59  | 116.25\n",
+      "  32    |   0.039418   | 98.580247  | 0.074485 | 97.70  | 116.48\n",
+      "  33    |   0.039143   | 98.621399  | 0.100763 | 96.81  | 115.88\n",
+      "  34    |   0.038273   | 98.563786  | 0.076064 | 97.89  | 117.68\n",
+      "  35    |   0.039778   | 98.526749  | 0.078446 | 97.37  | 116.23\n",
+      "  36    |   0.039272   | 98.551440  | 0.071579 | 97.63  | 116.19\n",
+      "  37    |   0.037920   | 98.555556  | 0.075445 | 97.37  | 116.38\n",
+      "  38    |   0.035836   | 98.823045  | 0.085379 | 97.52  | 116.24\n",
+      "  39    |   0.038514   | 98.588477  | 0.080036 | 97.41  | 116.78\n",
+      "  40    |   0.035874   | 98.748971  | 0.081174 | 97.63  | 116.38\n",
+      "\n",
+      "\n",
+      "Training complete! Best accuracy: 97.89%.\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = timeit.default_timer()\n",
     "\n",
@@ -229,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +362,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR_rnn(\n",
+      "  (emb): Embedding(130, 200)\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "model = mu.getModel(title)\n",
     "print(model)"
@@ -248,9 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss:  0.10629417292075231\n",
+      "test acc:  97.33333333333334\n",
+      "saved precision and recall results to file!\n"
+     ]
+    }
+   ],
    "source": [
     "loss, acc = tester.test(test_dataloader=test_dataloader,\n",
     "                        device=device,\n",
@@ -260,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,9 +425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uploaded model graph to tensorboard!\n"
+     ]
+    }
+   ],
    "source": [
     "mu.graphModel(train_dataloader, model, writer)"
    ]
