edit main no pretreained

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -112,8 +112,8 @@
     }
    ],
    "source": [
-    "pretrained_word2vec = pm.load_pretrained_model(ch2idx)\n",
-    "pretrained_word2vec = torch.tensor(pretrained_word2vec)"
+    "# pretrained_word2vec = pm.load_pretrained_model(ch2idx)\n",
+    "# pretrained_word2vec = torch.tensor(pretrained_word2vec)"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "                                                                   train_labels,\n",
     "                                                                   val_labels,\n",
     "                                                                   test_labels,\n",
-    "                                                                   batch_size=50)\n",
+    "                                                                   batch_size=100)\n",
     "\n",
     "no_train_dataloader, no_val_dataloader, no_test_dataloader = dl.data_loader(\n",
     "                                                                   no_train_first,\n",
@@ -167,7 +167,7 @@
     "                                                                   no_train_labels,\n",
     "                                                                   no_val_labels,\n",
     "                                                                   no_test_labels,\n",
-    "                                                                   batch_size=50)"
+    "                                                                   batch_size=100)"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('../tensorboard/phase3_tmp/test')"
+    "writer = SummaryWriter('../tensorboard/final/split')"
    ]
   },
   {
@@ -216,28 +216,28 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'both_test1_ovf'\n",
+    "title = 'split_test_1'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
-    "embed_dim = 200\n",
-    "hidden_size = 100\n",
+    "embed_dim = 100\n",
+    "hidden_size = 200\n",
     "num_classes = 2\n",
     "rnn_layers = 1\n",
     "\n",
     "num_filters = [100, 200, 100]\n",
     "kernel_sizes = [15, 21, 114]\n",
     "\n",
-    "dropout = 0.0\n",
+    "dropout = 0.2\n",
     "\n",
     "learning_rate = 0.001\n",
-    "weight_decay = 0\n",
+    "weight_decay = 1e-4\n",
     "\n",
     "model_name=\"RNN\"\n",
     "optim_name=\"Adam\"\n",
     "loss_fn_name=\"CEL\"\n",
     "\n",
-    "pretrained_model=pretrained_word2vec\n",
+    "pretrained_model=None\n",
     "freeze_embedding=False,"
    ]
   },
@@ -436,7 +436,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../result/final_yes_gudu', 'a') as f:\n",
+    "with open('../result/final_split', 'a') as f:\n",
     "        text = title + '\\t |\\tloss: ' + str(loss) + '\\t |\\tacc: ' + str(acc) + '\\t |\\t time: ' + str(round(end_time, 3)) + ' min\\n'\n",
     "        f.write(text)"
    ]
@@ -654,7 +654,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../result/final_no_gudu', 'a') as f:\n",
+    "with open('../result/final_split', 'a') as f:\n",
     "        text = title + '\\t |\\tloss: ' + str(loss) + '\\t |\\tacc: ' + str(acc) + '\\t |\\t time: ' + str(round(end_time, 3)) + ' min\\n'\n",
     "        f.write(text)"
    ]
