--- a/src/main_related.ipynb
+++ b/src/main_related.ipynb
@@ -37,18 +37,6 @@
      "text": [
       "avg length / 2: 7\n"
      ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/arise/auto/ocr/src/main_related.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main_related.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m first_np, second_np, label_np  \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39;49mgetData()\n",
-      "File \u001b[0;32m~/auto/ocr/src/data_related.py:390\u001b[0m, in \u001b[0;36mgetData\u001b[0;34m()\u001b[0m\n\u001b[1;32m    386\u001b[0m     first_sentences\u001b[39m.\u001b[39mappend(\u001b[39mstr\u001b[39m(first))\n\u001b[1;32m    388\u001b[0m \u001b[39m# first_sentences.append(str(first))\u001b[39;00m\n\u001b[0;32m--> 390\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39;49m(second) \u001b[39m>\u001b[39m avg_length:\n\u001b[1;32m    391\u001b[0m     second_sentences\u001b[39m.\u001b[39mappend(\u001b[39mstr\u001b[39m(second[:avg_length]))\n\u001b[1;32m    392\u001b[0m \u001b[39melse\u001b[39;00m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "source": [
@@ -57,18 +45,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linearized complete!\n"
+     ]
+    }
+   ],
    "source": [
     "first_np, second_np = utils.process_splitted(first_np, second_np)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done tokenizing both data!\n",
+      "saved ch2idx to file!\n",
+      "encoding comlete!\n"
+     ]
+    }
+   ],
    "source": [
     "first_ls, second_ls, ch2idx, max_len = utils.tokenize(first_np, second_np)\n",
     "first2idx_np, second2idx_np = utils.encode(first_ls, second_ls, ch2idx, max_len)"
@@ -76,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 1 GPU(s) available.\n",
+      "Device name: NVIDIA GeForce RTX 3070\n"
+     ]
+    }
+   ],
    "source": [
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -147,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +197,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doing without pretrained model!!!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arise/anaconda3/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.2 and num_layers=1\n",
+      "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR_rnn(\n",
+      "  (emb): Embedding(117, 300)\n",
+      "  (lstm1): RNN(\n",
+      "    (rnn): LSTM(300, 800, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (lstm2): RNN(\n",
+      "    (rnn): LSTM(300, 800, batch_first=True, dropout=0.2, bidirectional=True)\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=3200, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "trainer.set_seed(42)\n",
     "\n",
@@ -212,9 +262,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training...\n",
+      "\n",
+      " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
+      "--------------------------------------------------------------------------------\n",
+      "   1    |   0.485213   | 76.024938  | 0.432376 | 79.47  | 581.29\n",
+      "   2    |   0.449654   | 78.547469  | 0.418240 | 80.39  | 584.89\n",
+      "   3    |   0.441215   | 79.148827  | 0.415006 | 80.74  | 549.65\n",
+      "   4    |   0.436649   | 79.472160  | 0.407218 | 81.19  | 532.06\n",
+      "   5    |   0.433995   | 79.634198  | 0.410090 | 80.86  | 535.36\n",
+      "   6    |   0.431434   | 79.780494  | 0.400440 | 81.76  | 567.74\n"
+     ]
+    }
+   ],
    "source": [
     "start_time = timeit.default_timer()\n",
     "\n",
